# FileEncryptor

./: .gitignore  CMakeLists.txt  README.md  main.cpp  makeDirs.sh  project.excalidraw
src/app/Crypto/: Crypto.cpp  Crypto.hpp  CryptoMain.cpp
src/app/fileHandling/: IO.cpp  IO.hpp  ReadEnv.cpp
src/app/processes/: ProcessManagement.cpp  ProcessManagement.hpp  Task.hpp
testing/: benchmarks
